samples/_failures_safe/1761621295_eee670_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a0a21fc.c: In function ‘main’:
./samples/SAFE/__tmp_9a0a21fc.c:150:13: error: expected expression at end of input
  150 |             a.cols = read_int("Enter columns for matrix A (1-10): ", 1,
      |             ^
./samples/SAFE/__tmp_9a0a21fc.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a0a21fc.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a0a21fc.c:150:13: error: expected declaration or statement at end of input
